Atualizações e melhorias em componentes e arquivos do projeto
- Atualizado .gitignore para ignorar diretórios do Visual Studio.
- Limpeza no DocumentLayout.json, resultando em uma lista vazia.
- Atualizadas referências de pacotes no Modulum.Client.csproj.
- Modificações de texto no Home.razor para melhor clareza.
- Reestruturação significativa no Criacao.razor com novos parâmetros de rota.
- Tradução do botão "Cancel" para "Cancelar" no DialogComponent.razor.
- Melhorias na interação do usuário em Dynamic.razor com novos ícones.
- Novas opções de menu adicionadas no NavMenu.razor.
- Atualizações no project.assets.json para refletir novas versões de pacotes.
- Ajustes na exibição de mensagens e lógica de carregamento no Operacao.razor.
- Melhorias na lógica de manipulação de campos dinâmicos em Criacao.razor.cs.
- Novos componentes de diálogo (DialogDeleteComponent e DialogRenameComponent) adicionados para confirmação de ações.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 ################################################################################
 
 /.vs/Modulum.Client/FileContentIndex/
+/.vs/Modulum.Client/CopilotIndices/
 /.vs/Modulum.Api/FileContentIndex
 /Error2025-03-18.log
 # Build results
@@ -23,3 +24,4 @@ bld/
 [Ll]ogs/
 /obj/Debug/net8.0/Modulum.Api.AssemblyInfo.cs
 /obj/Debug/net8.0/Modulum.Api.AssemblyInfoInputs.cache
+
